2001-09-15  Cristy  <cristy@mystic.es.dupont.com>
	* Surveying the code for 64-bit compatibility.
	* The cloned colormap was too small (reported by Glenn).
	* A blob was being unmapped more than once for multi-frame images.

2001-09-12  Cristy  <cristy@mystic.es.dupont.com>
	* Text drawing now handles UTF8-encoding.
	* Off-by-one GetImagePixels() fix in draw.c
	* PingImage() now reports attributes for all images in
	  an image sequence.

2001-09-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
	* magick/image.h: Rename QuantumLeap define to QuantumDepth.
	  QuantumDepth is set to the values 8 or 16, depending on user
	  configuration option.

2001-09-09  Cristy  <cristy@mystic.es.dupont.com>
	* Updated PerlMagick signatures to reflect new digital
	  signature algorithm.

2001-09-08  Cristy  <cristy@mystic.es.dupont.com>
	* ImageMagick defaults to 16-bit quantum.  Set QuantumMagick for
	  8-bit.
	* Changed image->blob from BlobInfo to BlobInfo* so the Image
	  structure size is not dependent on the large-file preprocessor
	  defines.

2001-09-07  Cristy  <cristy@mystic.es.dupont.com>
	* Added -background to convert program usage text.
	* DispatchImage() now properly handles grayscale images.