@@ -53,6 +53,11 @@ ImageMagick Changes</font></font></font></b></td>
 2001-09-07  Cristy  <cristy@mystic.es.dupont.com>
 	* Added -background to convert program usage text.
 	* DispatchImage() now properly handles grayscale images.
+
+2001-09-01  Glenn  <glennrp@home.kom>
+	* The compression quality setting is now recognized when creating
+	  MPEG images (contributed by Lawrence Livermore National Laboratory
+	  (LLNL)).
 </pre>
 </dd>
 </dl>
